Fix broken layouts on mobile devices caused by long words in MultiColumnText pattern

--- a/patterns/core/MultiColumnText/multiColumnText.styl
+++ b/patterns/core/MultiColumnText/multiColumnText.styl
@@ -68,6 +68,9 @@ $side-padding-large = 2rem
     @media (min-width $breakpoint-huge)
       margin-left $column-spacing-large
 
+// General column styles
+.multi-column-text__column
+  word-break break-word
 
 /* Colors */
 .multi-column-text__section--with-backgrund-brand-1
